removed TOS URL and added defaultWorkspace flag
